# libtimecontrol

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  build.sh  build_libs.sh  build_wheel.sh  demo.py  dockerfile  meson.build  publish.sh  pyproject.toml  readme.md
docker/: manylinux2014_x86_64_i386
libtimecontrol/: clock_state.h  clock_state.inl  clock_state_test.cpp  constants.h  libtimecontrol.py  meson.build  time_control.cpp  time_control.h  time_control.py  time_control_test.cpp  time_operators.h  time_operators.inl  time_overrides.h  time_overrides.inl  time_overrides_test.cpp  time_reader.cpp
libtimecontrol/integration_tests/: integration_test.py  meson.build  test_prog.cpp  test_prog_dlsym.cpp
libtimecontrol/ipc/: ipc.inl  ipc_common.h  ipc_test.cpp  ipc_uds.h  ipc_uds.inl  meson.build  shared_mem.h  shared_mem.inl
libtimecontrol/microbenchmark/: bench.c  harness.py  run_bench.sh  run_benchmark.py
libtimecontrol/microbenchmark/cffi_api/: build.py
libtimecontrol/src/: channel_lease.cpp  constants.h  fork.h  ipc.cpp  ipc.h  ipc_server.cpp  ipc_server.h  ipc_test.cpp  libc_overrides.cpp  libc_overrides.h  libc_overrides_test.cpp  log.cpp  log.h  meson.build  real_time_fns.cpp  real_time_fns.h  seq_lock.h  shared_mem.inl  shm_layout.h  sock_read_struct.h  sock_read_struct_test.cpp  synced_fake_clock.cpp  synced_fake_clock.h  synced_fake_clock_test.cpp  test_environment.h  time_control.cpp  time_control.h  time_control_test.cpp  time_operators.h  time_reader.cpp  time_reader.h  time_reader_entry.cpp  time_wire.h  time_writer.cpp  time_writer.h  time_writer_entry.cpp
libtimecontrol/src/async_test/: common.h  controllee.cpp  controller.cpp  meson.build
libtimecontrol/src/ipc/: ipc.h  seq_lock.h  shared_mem.h  sock_read_struct.h  sock_read_struct.inl  sock_read_struct_test.cpp
libtimecontrol/src/time_protocol/: channel_lease.cpp  channel_lease.h  shm_layout.h  synced_fake_clock.cpp  synced_fake_clock.h  synced_fake_clock_test.cpp  time_control.cpp  time_control.h  time_control_test.cpp  time_operators.cpp  time_reader.cpp  time_reader.h  time_writer.cpp  time_writer.h
libtimecontrol/src/util/: ephemeral_directory.cpp  ephemeral_directory.h  ephemeral_directory_test.cpp  error.h  helpers.cpp  helpers.h  helpers_test.cpp  log.h  meson.build
