[project]
name = "libtimecontrol"
version = "0.1.0"
description = ""
authors = [
    {name = "William Henning",email = "wchenningwchenning@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    { path = "libtimecontrol/lib/*", format=["wheel"] },
    { path = "libtimecontrol/bin/*", format=["wheel"] },
]
exclude = [
    "**/*.cpp",
    "**/*.h",
    "**/*.inl",
    "**/*.build",
]
