[project]
name = "libtimecontrol"
version = "0.1.0"
description = ""
authors = [
    {name = "William Henning",email = "wchenningwchenning@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cffi (>=1.17.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
include = [
    { path = "libtimecontrol/lib/*", format=["wheel"] },
    { path = "libtimecontrol/bin/*", format=["wheel"] },
]
exclude = [
    "**/*.cpp",
    "**/*.h",
    "**/*.inl",
    "**/*.build",
]

[tool.poetry.group.dev.dependencies]
cibuildwheel = "2.23.3"
auditwheel = "^6.4.0"
patchelf = "^0.17.2.2"
meson = "^1.8.2"
ninja = "^1.11.1.4"


